package jp.tkugimot.gofdesignpatternjava.adapter.domain;

public interface GhibliRepository {
    public GhibliEntity findOneById(String id);
}
